# LaneTracking

./: .gitignore  README copy.md  README.md  echo
Deep_Lane_Detect/: README.md  Step to Train and Visualize Model  label_data_training.json  sorted_test.txt  test.txt  test_label.json  test_tasks.json  train_gt.txt
Deep_Lane_Detect/configs/: tusimple_res18.py  tusimple_res34.py  tusimple_res34_bend_25_v1.py  tusimple_res34_bend_25_v1_320x320.py  tusimple_res34_bend_25_v1_416x320.py  tusimple_res34_bend_25_v1_480x320.py  tusimple_res34_bend_25_v2.py  tusimple_res34_bend_25_v3.py  tusimple_res34_bend_25_v4.py  tusimple_res34_v2.py  tusimple_res34_v3.py  tusimple_res34_v3_1.py
Deep_Lane_Detect/configs/experiment/: tusimple_res34_bend_25_v1_fix_num_row.py  tusimple_res34_brightness_v1.py  tusimple_res34_brightness_v2.py  tusimple_res34_brightness_v3.py  tusimple_res34_fix_num_row_160_steps_all_bright.py
Deep_Lane_Detect/configs/test_byd/: culane_res34_800x320.py
Deep_Lane_Detect/deploy/: byd_trt_infer_original_fix_scale_coords_update.py  byd_undistortion.py  camera_trt_infer_original_fix_scale_coords_update.py  lane_detect_center.py  lane_detect_image.py  pt2onnx.py  trt_infer.py  trt_infer_2_lanes.py  trt_infer_adaptive_polyfit.py  trt_infer_fix_polyfit.py  trt_infer_fix_polyfit_2_lanes.py  trt_infer_original.py  trt_infer_original_fix_scale_coords.py  trt_infer_original_fix_scale_coords_update.py  trt_infer_with_lane_detect.py  up_sendd.py
Deep_Lane_Detect/evaluation/: eval_wrapper.py
Deep_Lane_Detect/preprocessing/: brighten_video.py  convert_tusimple.py  convert_tusimple_mo.py  extract_frames_from_video.py  extract_frames_from_video_resize.py  find_hsv.py  find_ipm.py  generate_lane_masks_contours.py  generate_tusimple_from_original.py  get_pitch_yaw_from_vanishing.py  mask-to-tusimple-converter.py  sort_test_txt_by_filename.py  split_train_test.py  split_train_test_img_only.py  test_task_to_tusimple.py  train_test_to_tusimple.py  verify_image_pixels.py
Deep_Lane_Detect/scripts/: check_tusimple.py
Deep_Lane_Detect/tmp/: tusimple_eval_tmp.0.txt
Deep_Lane_Detect/utils/: debug.py  image_path_loader.py
Docker/: Dockerfile  docker.sh  v1_docker.sh
Docker/Docker_foxy/: Dockerfile
Docker/Docker_humble/: Dockerfile
Docker/Docker_humble_desktop/: Dockerfile
canbus/: README.md  can_cleanup.sh  install_python_deps.sh  setup_can0.sh  setup_canable.sh  test_canable.py  test_canable_v2.py
odom_test/: odom_circle5times_v1.yaml  odom_circle5times_v2.yaml  odom_closeloop_v1.yaml  odom_closeloop_v2.yaml
ros2_ws/src/robot_bringup/launch/: byd_lanedetect_control.launch.py  robot_bringup.launch.py  robot_lanedetect_control.launch.py
ros2_ws/src/robot_camera/: CMakeLists.txt  package.xml
ros2_ws/src/robot_camera/config/: culane_res34_480x320.py  matlab_calibration.cpp.yaml  matlab_calibration.yaml  matlab_calibration_resize.cpp.yaml  matlab_calibration_resize.yaml  matlab_calibration_resize_800x320.yaml
ros2_ws/src/robot_camera/launch/: dual_camera.launch.py
ros2_ws/src/robot_camera/scripts/: LaneTracking.code-workspace  byd_lane_detect_image.py  byd_trt_infer.py  cam_sub_byd_lane_detect_image.py  camera_watchdog_node.py  dummy_script.py  lane_detect.py  lane_detect_image.py  lane_detect_no_depth.py  left_cam_recorder_node.py  mono_fisheye_undistort.py  stereo_cam_recorder_node.py  stereo_fisheye2depth.py  stereo_fisheye2depth_lane_detect_pipeline.py  stereo_fisheye2depth_pipeline.py  stereo_fisheye2depth_pipeline_add_bp.py  stereo_fisheye2depth_pipeline_add_sgbm_wls.py  stereo_fisheye2depth_pipeline_original.py  trt_infer.py  udp_sender_node.py
ros2_ws/src/robot_camera/src/: cpp_mono_fisheye_undistort.cpp  cpp_node.cpp  stereo2depth_node.cpp  stereo_fisheye2depth_pipeline.cpp  stereo_undistort_node.cpp
ros2_ws/src/robot_can_interface/: CMakeLists.txt  package.xml
ros2_ws/src/robot_can_interface/scripts/: dummy_script.py  robot_can_interface_node.py
ros2_ws/src/robot_can_interface/src/: cpp_node.cpp
ros2_ws/src/robot_controller/: CMakeLists.txt
ros2_ws/src/robot_controller/scripts/: byd_pid_controller.py  cascade_pid_controller.py  lowpass_filter.py  pid_controller copy.py  pid_controller.py  plot_pid_log.py  plotter_node.py  steering_model_node.py
ros2_ws/src/robot_description/: CMakeLists.txt
ros2_ws/src/robot_description/launch/: rviz.launch.py
ros2_ws/src/robot_odometry/: CMakeLists.txt  package.xml
(+7 files in other folders)
